# zerosh

./: Cargo.toml  README.md
src/: helper.rs  main.rs  shell.rs
